Fix second content spacing and font

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -41,13 +41,14 @@ body {
 .content2 {
     text-align: center;
     flex-grow: 1;
-    padding: 100px 0px;
+    padding: 100px 200px;
 }
 
 .image-container {
     display: flex;
-    justify-content: space-between;
-    padding: 30px 200px;
+    justify-content: center;
+    padding: 60px 0px;
+    gap: 40px;
 }
 
 .content3 {
@@ -116,7 +117,7 @@ button {
 }
 
 .image-title {
-    font-size: 36px;
+    font-size: 48px;
     font-weight: 800;
     color: #1F2937;
 }
@@ -140,4 +141,9 @@ button {
 
 .images img {
     border-radius: 10px;
+}
+
+.image-subtext {
+    font-size: 24px;
+    margin-top: 16px;
 }
